ready view, profile
Change-Id: I0f0cdb0b0194b6a0beed2f9941307786d25cf065

--- a/JSFProject/src/resources/messages_en.properties
+++ b/JSFProject/src/resources/messages_en.properties
@@ -27,6 +27,13 @@ view_header_number=No.
 view_header_full_name=Full name
 view_header_address=Address
 view_header_telephone=Telephone number
+profile_header=Profile: 
+profile_full_name=Full name: 
+profile_address=Address: 
+profile_telephone=Telephone: 
+profile_date_creation=Date of creation: 
+profile_mail=Mail: 
+profile_birthdate=Date of Birth: 
 message.loginerror=Incorrect login or password
 message.registrationpasswordserror=Password and confirmed password don't equal.
 message.registrationloginerror=This login already exists.
