--- a/JSFProject/src/resources/messages_ru.properties
+++ b/JSFProject/src/resources/messages_ru.properties
@@ -27,6 +27,13 @@ view_header_number=\u2116 \u043F/\u043F
 view_header_full_name=\u0424.\u0418.\u041E.
 view_header_address=\u0410\u0434\u0440\u0435\u0441
 view_header_telephone=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
+profile_header=\u041F\u0440\u043E\u0444\u0438\u043B\u044C: 
+profile_full_name=\u0424.\u0418.\u041E. : 
+profile_address=\u0410\u0434\u0440\u0435\u0441: 
+profile_telephone=\u0422\u0435\u043B\u0435\u0444\u043E\u043D: 
+profile_date_creation=\u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F: 
+profile_mail=\u042D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430\u044F \u043F\u043E\u0447\u0442\u0430: 
+profile_birthdate=\u0414\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F: 
 message.loginerror=\u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
 message.registrationpasswordserror=\u041F\u0430\u0440\u043E\u043B\u0438 \u043D\u0435 \u0441\u043E\u0432\u043F\u0430\u0434\u0430\u044E\u0442
 message.registrationloginerror=\u042D\u0442\u043E\u0442 \u043B\u043E\u0433\u0438\u043D \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442
