--- a/JSFProject/src/resources/messages_en.properties
+++ b/JSFProject/src/resources/messages_en.properties
@@ -34,6 +34,9 @@ profile_telephone=Telephone:
 profile_date_creation=Date of creation: 
 profile_mail=Mail: 
 profile_birthdate=Date of Birth: 
+profile_photo=Photo:
+add_header=Record addition
+add_button=Add record
 message.loginerror=Incorrect login or password
 message.registrationpasswordserror=Password and confirmed password don't equal.
 message.registrationloginerror=This login already exists.
