--- a/JSFProject/src/resources/messages_en.properties
+++ b/JSFProject/src/resources/messages_en.properties
@@ -37,6 +37,12 @@ profile_birthdate=Date of Birth:
 profile_photo=Photo:
 add_header=Record addition
 add_button=Add record
+edit_button=Change record
+edit_confirm=Do you really want to delete this record?
+control_header_name=Username
+control_header_type=Type
+control_caption=Users
+delete_confirm=Do you really want to delete this user?
 message.loginerror=Incorrect login or password
 message.registrationpasswordserror=Password and confirmed password don't equal.
 message.registrationloginerror=This login already exists.
