add last functions
Change-Id: I2b48f26c170eaf39c912caef086417cc5589cc1f

--- a/JSFProject/src/resources/messages_en.properties
+++ b/JSFProject/src/resources/messages_en.properties
@@ -43,6 +43,9 @@ control_header_name=Username
 control_header_type=Type
 control_caption=Users
 delete_confirm=Do you really want to delete this user?
+search_keyword=Keyword 
+search_all=All
+search_button=Find
 message.loginerror=Incorrect login or password
 message.registrationpasswordserror=Password and confirmed password don't equal.
 message.registrationloginerror=This login already exists.
