Add last functions
Change-Id: I5d80a5018f2c0c0924e04408669b9e9d0519be61

--- a/JSFProject/src/resources/messages_en.properties
+++ b/JSFProject/src/resources/messages_en.properties
@@ -34,7 +34,7 @@ profile_telephone=Telephone:
 profile_date_creation=Date of creation: 
 profile_mail=Mail: 
 profile_birthdate=Date of Birth: 
-profile_photo=Photo:
+profile_photo=Photo (max. 2 MB):
 add_header=Record addition
 add_button=Add record
 edit_button=Change record
@@ -46,11 +46,16 @@ delete_confirm=Do you really want to delete this user?
 search_keyword=Keyword 
 search_all=All
 search_button=Find
+search_message_nothing=Nothing was found
 message.loginerror=Incorrect login or password
 message.registrationpasswordserror=Password and confirmed password don't equal.
 message.registrationloginerror=This login already exists.
 message.wrongview=Downloading data error
-
+message_empty_field=Empty field
+message_wrong_username=Wrong full name
+message_wrong_address=Wrong address
+message_wrong_telephone=Wrong telephone
+message_wrong_mail=Wrong mail
 message.registrationincorrectloginerror=Login has to consist of letters, numbers, and underscores. 
 message.nullpage=Page not found.
 message.wrongaction= : command not found!
