Ready JSF application
Change-Id: I9e77558b3b533a93c0eb29edf07d6c35041ecd28

--- a/JSFProject/src/resources/messages_en.properties
+++ b/JSFProject/src/resources/messages_en.properties
@@ -52,25 +52,7 @@ message.registrationpasswordserror=Password and confirmed password don't equal.
 message.registrationloginerror=This login already exists.
 message.wrongview=Downloading data error
 message_empty_field=Empty field
-message_wrong_username=Wrong full name
-message_wrong_address=Wrong address
-message_wrong_telephone=Wrong telephone
-message_wrong_mail=Wrong mail
-message.registrationincorrectloginerror=Login has to consist of letters, numbers, and underscores. 
-message.nullpage=Page not found.
-message.wrongaction= : command not found!
-message.errorProfile=Records wasn't found
-message.errorAddition=Record wasn't added
-message.successAddition=Record was successfully added
-message.successEditing=Record was successfully edited
-message.errorEditing=Record wasn't edited
-message.successDeleting=Record was successfully deleted
-message.successUserDeleting=User was successfully deleted
-message.errorDeleting=Record wasn't deleted
-message.errorUserDeleting=User wasn't deleted
-message.emptyview=Records weren't searched
-message.maxSizeError=File size is exceeded.
-message.errorFullName=Full name has to consist of only letters and spaces
-message.errorAddress=Address has to consist of only letters, numbers and spaces
-message.errorPhoneNumber=Telephone has to consist of only numbers and + at the beginning
-message.errorMail=Wrong mail. Right mail: example@com.by
+message_wrong_username=Full name has to consist of only letters and spaces
+message_wrong_address=Address has to consist of only letters, numbers and spaces
+message_wrong_telephone=Telephone has to consist of only numbers and + at the beginning
+message_wrong_mail=Wrong mail (ex. mail@com.by)
